admission/ValidatingAdmissionPolicy/policies/windows-hostprocess/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: windows-hostprocess
  annotations:
    security.kubeapt.io/displayName: 'Windows Hostprocess'
    security.kubeapt.io/description: ValidatingAdmissionPolicy for windows-hostprocess.
    security.kubeapt.io/resource: Pods
    security.kubeapt.io/severity: "10"
    security.kubeapt.io/remediation: Adjust workloads to satisfy the windows-hostprocess policy.
    policies.kolteq.com/validatingAdmissionPolicy: a2be62cd-9994-542f-a5e4-25ed5bec20c5
  labels:
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    windows-hostprocess.security.kolteq.com/audit: 'false-true'
    windows-hostprocess.security.kolteq.com/enforce: 'false-true'
    windows-hostprocess.security.kolteq.com/warn: 'false-true'
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        !has(object.spec.securityContext) ||
        !has(object.spec.securityContext.windowsOptions) ||
        !has(object.spec.securityContext.windowsOptions.hostProcess) ||
        object.spec.securityContext.windowsOptions.hostProcess == false
      message: >
        HostProcess is not allowed. spec.securityContext.windowsOptions.hostProcess
        must be undefined or set to false.
